k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-manager
  namespace: nginx-manager
  labels:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager
    app.kubernetes.io/component: service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # For AWS EKS
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  - name: manager
    port: 8080
    targetPort: manager
    protocol: TCP
  selector:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-manager-nodeport
  namespace: nginx-manager
  labels:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager
    app.kubernetes.io/component: service-nodeport
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
    nodePort: 30080
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
    nodePort: 30443
  - name: manager
    port: 8080
    targetPort: manager
    protocol: TCP
    nodePort: 30800
  selector:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-manager-headless
  namespace: nginx-manager
  labels:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager
    app.kubernetes.io/component: service-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  - name: manager
    port: 8080
    targetPort: manager
    protocol: TCP
  selector:
    app.kubernetes.io/name: nginx-manager
    app.kubernetes.io/instance: nginx-manager
